# tabpack

./: .gitignore  README.md  pyproject.toml
experiments/examples/demo/: config.json  report.json
experiments/tabpack/: make.py
experiments/tabpack-cosine/: make.py
experiments/tabpack-cosine-macbook/: make.py
experiments/tabpack-cosine-macbook/adult/main/: config.json  report.json
experiments/tabpack-cosine-macbook/black-friday/main/: config.json  report.json
experiments/tabpack-cosine-macbook/california/main/: config.json  report.json
experiments/tabpack-cosine-macbook/churn/main/: config.json  report.json
experiments/tabpack-cosine-macbook/diamond/main/: config.json  report.json
experiments/tabpack-cosine-macbook/higgs-small/main/: config.json  report.json
experiments/tabpack-cosine-macbook/house/main/: config.json  report.json
experiments/tabpack-cosine-macbook/microsoft/main/: config.json  report.json
experiments/tabpack-cosine-macbook/otto/main/: config.json  report.json
experiments/tabpack-cosine-offline/: make.py
experiments/tabpack-cosine-offline/adult/main/: config.json  report.json
experiments/tabpack-cosine-offline/black-friday/main/: config.json  report.json
experiments/tabpack-cosine-offline/california/main/: config.json  report.json
experiments/tabpack-cosine-offline/churn/main/: config.json  report.json
experiments/tabpack-cosine-offline/diamond/main/: config.json  report.json
experiments/tabpack-cosine-offline/higgs-small/main/: config.json  report.json
experiments/tabpack-cosine-offline/house/main/: config.json  (+1 more)
scripts/: run_tabpack_experiment.py
src/lib/: config.py  data.py  datasets.py  env.py  experiment.py  metrics.py  parallel.py  utils.py
src/lib/examples/: demo.py
src/lib/optim/: utils.py
src/lib/tools/: evaluate.py  tune.py
src/project/: ensemble_utils.py  ensemble_utils_torch.py  metrics.py  metrics_torch.py  nn.py  optim.py  tabpack.py  types.py  utils.py
(+240 files in other folders)
